--- a/src/style.css
+++ b/src/style.css
@@ -22,10 +22,11 @@ header div {
 
 header div p {
     margin-right: 10px;
+    color: #fff;
 }
 
 header a {
-    color: white;
+    color: #fff;
     text-decoration: none;
 }
 
@@ -67,7 +68,21 @@ nav a {
 #intro .stats p {
     font-size: 2rem;
     margin-bottom: 5px;
+    color: #4CAF50;
 }
 
 #intro .stats span {
     font-size: 0.7rem;
+    color: #4CAF50;
+}
+
+#intro .stats div p {
+    font-size: 1.5rem;
+    color: #4CAF50;
+    margin-bottom: 5px;
+}
+
+#intro .stats div span {
+    font-size: 0.7rem;
+    color: #4CAF50;
+}
